Localization properties seperated

--- a/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
@@ -1,27 +1,36 @@
-edit.title=Upravi\u0165
-edit.edit=Zmeni\u0165 \u00fadaje
-edit.save=Ulo\u017ei\u0165
-edit.cancel=Zru\u0161i\u0165
+buttons.save=Ulo\u017ei\u0165
+buttons.cancel=Zru\u0161i\u0165
+buttons.delete=Zmaza\u0165
+buttons.update=Update
+buttons.edit=Editova\u0165
+buttons.create=Vytvori\u0165
 
-list.delete=Zmaza\u0165
-list.create=Vytvori\u0165
+label.edit=Zmeni\u0165 \u00fadaje
+label.delete=Zmaza\u0165 \u00fadaje
 
+#COURIER
+courierDTO.firstName=Meno
+courierDTO.lastName=Priezvisko
+courierDTO.email=Email
+courier.createMessage=Vytvori\u0165 nov\u00e9ho kuri\u00e9ra
+
+
+#DELIVERY ITEM
 deliveryItem.name=Meno
 deliveryItem.description=Popis
 deliveryItem.weight=V\u00e1ha
-
 deliveryItem.list.title=Doru\u010dovacie polo\u017eky
 deliveryItem.list.allitems=V\u0161etky doru\u010dovacie polo\u017eky
 deliveryItem.new=Nov\u00e1 doru\u010dovacia polo\u017eka 
 
 #CUSTOMER
-customer.list.title="Z\u00e1kazn\u00edk"
-customer.list.allitems="V\u0161etci z\u00e1kazn\u00edci"
-customer.firstName="Meno"
-customer.lastName="Priezvisko"
-customer.email="Email"
-customer.street="Ulica"
-customer.city="Mesto"
-customer.zipCode="PS\u010c"
-customer.country="Krajina"
-customer.telephoneNumber="Telef\u00f3n"
+customer.list.title=Z\u00e1kazn\u00edk
+customer.list.allitems=V\u0161etci z\u00e1kazn\u00edci
+customer.firstName=Meno
+customer.lastName=Priezvisko
+customer.email=Email
+customer.street=Ulica
+customer.city=Mesto
+customer.zipCode=PS\u010c
+customer.country=Krajina
+customer.telephoneNumber=Telef\u00f3n
