--- a/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
@@ -1,27 +1,36 @@
-edit.title=Edit
-edit.edit=Change data
-edit.save=Save
-edit.cancel=Cancel
+buttons.save=Save
+buttons.cancel=Cancel
+buttons.delete=Delete
+buttons.update=Update
+buttons.edit=Edit
+buttons.create=Create
 
-list.delete=Delete
-list.create=Create
+label.edit=Change data
+label.delete=Remove data
 
+#COURIER
+courierDTO.firstName=First name
+courierDTO.lastName=Last name
+courierDTO.email=Email
+courier.createMessage=Create new courier
+
+
+#DELIVERY ITEM
 deliveryItem.name=Name
 deliveryItem.description=Description
 deliveryItem.weight=Weight
-
 deliveryItem.list.title=Delivery items
 deliveryItem.list.allitems=All delivery items
 deliveryItem.new=New delivery item
 
 #CUSTOMER
-customer.list.title="Customers"
-customer.list.allitems="All customers"
-customer.firstName="Name"
-customer.lastName="Surname"
-customer.email="Email"
-customer.street="Street"
-customer.city="City"
-customer.zipCode="Zip Code"
-customer.country="Country"
-customer.telephoneNumber="Phone"
+customer.list.title=Customers
+customer.list.allitems=All customers
+customer.firstName=Name
+customer.lastName=Surname
+customer.email=Email
+customer.street=Street
+customer.city=City
+customer.zipCode=Zip Code
+customer.country=Country
+customer.telephoneNumber=Phone
