Slovak localization for system messages

--- a/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
@@ -34,3 +34,27 @@ customer.city=Mesto
 customer.zipCode=PS\u010c
 customer.country=Krajina
 customer.telephoneNumber=Telef\u00f3n
+
+
+#####SYSTEM MESSAGES#####
+
+stripes.errors.header=<div class="alert alert-danger">Pros\u00edm opravte nasleduj\u00face chyby:<ul>
+
+converter.number.invalidNumber=Hodnota ({1}) vlo\u017een\u00e1 v poli {0} mus\u00ed by\u0165 validn\u00e9 \u010d\u00edslo
+converter.byte.outOfRange=Hodnota ({1}) vlo\u017een\u00e1 v poli {0} bola mimo interval od {2} do {3}
+converter.short.outOfRange=Hodnota ({1}) vlo\u017een\u00e1 v poli {0} bola mimo interval od {2} do {3}
+converter.integer.outOfRange=Hodnota ({1}) vlo\u017een\u00e1 v poli {0} bola mimo interval od {2} do {3}
+converter.float.outOfRange=Hodnota ({1}) vlo\u017een\u00e1 v poli {0} bola mimo interval od {2} do {3}
+converter.enum.notAnEnumeratedValue=Hodnota "{1}" nie je validn\u00e1 pre pole {0}
+converter.date.invalidDate=Hodnota ({1}) vlo\u017een\u00e1 v poli {0} mus\u00ed by\u0165 validn\u00fd d\u00e1tum
+converter.email.invalidEmail=Hodnota ({1}) nie je validnou email adresou
+converter.creditCard.invalidCreditCard=Hodnota ({1}) nie je validn\u00fdm \u010d\u00edslom kreditnej karty
+
+validation.required.valueNotPresent={0} je povinn\u00e1 polo\u017eka
+validation.minlength.valueTooShort={0} mus\u00ed ma\u0165 d\u013a\u017eku minim\u00e1lne {2} znakov
+validation.maxlength.valueTooLong={0} nasmie ma\u0165 d\u013a\u017eku viac ako {2} znakov
+validation.minvalue.valueBelowMinimum=Minim\u00e1lna povolen\u00e1 hodnota pre {0} je {2}
+validation.maxvalue.valueAboveMaximum=Maxim\u00e1lna povolen\u00e1 hodnota pre {0} je {2}
+validation.mask.valueDoesNotMatch=<em>{1}</em> nie je spr\u00e1vne {0}
+validation.expression.valueFailedExpression=Hodnota zadan\u00e1 ({1}) pre pole {0} nie je validn\u00e1
+validation.file.postBodyTooBig=Ve\u013ekos\u0165 nahr\u00e1van\u00e9ho {3} KB prekra\u010duje maxim\u00e1lnu kapacitu {2} KB
