--- a/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
@@ -1,3 +1,5 @@
+
+
 edit.title=Upravi\u0165
 edit.edit=Zmeni\u0165 \u00fadaje
 edit.save=Ulo\u017ei\u0165
@@ -25,3 +27,15 @@ customer.city="Mesto"
 customer.zipCode="PS\u010c"
 customer.country="Krajina"
 customer.telephoneNumber="Telef\u00f3n"
+
+
+buttons.save=Save
+buttons.cancel=Cancel
+buttons.delete=Delete
+buttons.update=Update
+
+courierDTO.firstName=Meno
+courierDTO.lastName=Last name
+courierDTO.email=Email
+
+courier.createMessage=Create new courier
