--- a/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
@@ -25,3 +25,15 @@ customer.city="City"
 customer.zipCode="Zip Code"
 customer.country="Country"
 customer.telephoneNumber="Phone"
+
+
+buttons.save=Save
+buttons.cancel=Cancel
+buttons.delete=Delete
+buttons.update=Update
+
+courierDTO.firstName=First name
+courierDTO.lastName=Last name
+courierDTO.email=Email
+
+courier.createMessage=Create new courier
