--- a/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
@@ -1,7 +1,7 @@
 buttons.save=Ulo\u017ei\u0165
 buttons.cancel=Zru\u0161i\u0165
 buttons.delete=Zmaza\u0165
-buttons.update=Update
+buttons.update=Upravi\u0165
 buttons.edit=Editova\u0165
 buttons.create=Vytvori\u0165
 
@@ -13,7 +13,7 @@ courierDTO.firstName=Meno
 courierDTO.lastName=Priezvisko
 courierDTO.email=Email
 courier.createMessage=Vytvori\u0165 nov\u00e9ho kuri\u00e9ra
-
+courier.list.title=V\u0161etci kuri\u00e9ri
 
 #DELIVERY ITEM
 deliveryItem.name=Meno
