loclaization label for courier list added

--- a/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
@@ -13,6 +13,7 @@ courierDTO.firstName=First name
 courierDTO.lastName=Last name
 courierDTO.email=Email
 courier.createMessage=Create new courier
+courier.list=All couriers
 
 
 #DELIVERY ITEM
