--- a/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
@@ -13,6 +13,7 @@ courierDTO.firstName=Meno
 courierDTO.lastName=Priezvisko
 courierDTO.email=Email
 courier.createMessage=Vytvori\u0165 nov\u00e9ho kuri\u00e9ra
+courier.list=V\u0161etci kuri\u00e9ri
 
 
 #DELIVERY ITEM
