Changing title for courier pages

--- a/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
@@ -1,3 +1,5 @@
+deliveryservice.main=Main page
+
 buttons.save=Save
 buttons.cancel=Cancel
 buttons.delete=Delete
@@ -14,6 +16,8 @@ courierDTO.lastName=Last name
 courierDTO.email=Email
 courier.createMessage=Create new courier
 courier.list.title=All couriers
+courier.title=Couriers
+courier.edit=Manage courier
 
 
 #DELIVERY ITEM
@@ -26,6 +30,7 @@ deliveryItem.new=New delivery item
 
 #CUSTOMER
 customer.list.title=Customers
+customer.title=Customers
 customer.list.allitems=All customers
 customer.firstName=Name
 customer.lastName=Surname
