--- a/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
@@ -1,3 +1,5 @@
+deliveryservice.main=Hlavn\u00e1 str\u00e1nka
+
 buttons.save=Ulo\u017ei\u0165
 buttons.cancel=Zru\u0161i\u0165
 buttons.delete=Zmaza\u0165
@@ -14,6 +16,8 @@ courierDTO.lastName=Priezvisko
 courierDTO.email=Email
 courier.createMessage=Vytvori\u0165 nov\u00e9ho kuri\u00e9ra
 courier.list.title=V\u0161etci kuri\u00e9ri
+courier.title=Kuri\u00e9ri
+courier.edit=Spr\u00e1va kuri\u00e9ra
 
 #DELIVERY ITEM
 deliveryItem.name=Meno
@@ -26,6 +30,7 @@ deliveryItem.new=Nov\u00e1 doru\u010dovacia polo\u017eka
 #CUSTOMER
 customer.list.title=Z\u00e1kazn\u00edk
 customer.list.allitems=V\u0161etci z\u00e1kazn\u00edci
+customer.title=Z\u00e1kazn\u00edci
 customer.firstName=Meno
 customer.lastName=Priezvisko
 customer.email=Email
