Ugly ugly work on delivery jsp.

--- a/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
@@ -37,3 +37,9 @@ courierDTO.lastName=Last name
 courierDTO.email=Email
 
 courier.createMessage=Create new courier
+
+delivery.customer=Customer
+delivery.placeFrom=From
+delivery.placeTo=To
+delivery.courier=Courier
+delivery.createMessage=Create New Delivery
