--- a/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
@@ -39,3 +39,8 @@ courierDTO.lastName=Last name
 courierDTO.email=Email
 
 courier.createMessage=Create new courier
+
+delivery.customer=Z\u00e1kazn\u00edk
+delivery.placeFrom=Z
+delivery.placeTo=Do
+delivery.courier=Kuri\u00e9r
