--- a/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
@@ -18,6 +18,7 @@ courier.createMessage=Create new courier
 courier.list.title=All couriers
 courier.title=Couriers
 courier.edit=Manage courier
+courier=Courier
 
 
 #DELIVERY ITEM
