--- a/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
@@ -18,6 +18,7 @@ courier.createMessage=Vytvori\u0165 nov\u00e9ho kuri\u00e9ra
 courier.list.title=V\u0161etci kuri\u00e9ri
 courier.title=Kuri\u00e9ri
 courier.edit=Spr\u00e1va kuri\u00e9ra
+courier=Kuri\u00e9r
 
 #DELIVERY ITEM
 deliveryItem.name=Meno
