--- a/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
@@ -16,9 +16,33 @@ courierDTO.lastName=Last name
 courierDTO.email=Email
 courier.createMessage=Create new courier
 courier.list.title=All couriers
+
+
+#DELIVERY ITEM
+deliveryItem.name=Name
+deliveryItem.description=Description
+deliveryItem.weight=Weight
+deliveryItem.list.title=Delivery items
+deliveryItem.list.allitems=All delivery items
+deliveryItem.new=New delivery item
+
+#CUSTOMER
+customer.list.title=Customers
+customer.list.allitems=All customers
+customer.firstName=Name
+customer.lastName=Surname
+customer.email=Email
+customer.street=Street
+customer.city=City
+customer.zipCode=Zip Code
+customer.country=Country
+customer.telephoneNumber=Phone
+customer.create=Create new customer
+
 courier.title=Couriers
 courier.edit=Manage courier
 courier=Courier
+
 
 
 #DELIVERY ITEM
@@ -41,3 +65,4 @@ customer.city=City
 customer.zipCode=Zip Code
 customer.country=Country
 customer.telephoneNumber=Phone
+
