--- a/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
@@ -40,6 +40,7 @@ customer.city=Mesto
 customer.zipCode=PS\u010c
 customer.country=Krajina
 customer.telephoneNumber=Telef\u00f3n
+customer.create=Vytvori\u0165 nov\u00e9ho z\u00e1kazn\u00edka
 
 
 #####SYSTEM MESSAGES#####
