changed customer create page title

--- a/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
@@ -28,6 +28,7 @@ deliveryItem.new=New delivery item
 
 #CUSTOMER
 customer.list.title=Customers
+customer.edit.title=Edit customer
 customer.list.allitems=All customers
 customer.firstName=Name
 customer.lastName=Surname
@@ -38,6 +39,7 @@ customer.zipCode=Zip Code
 customer.country=Country
 customer.telephoneNumber=Phone
 customer.create=Create new customer
+
 
 courier.title=Couriers
 courier.edit=Manage courier
