--- a/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
@@ -30,6 +30,7 @@ deliveryItem.new=Nov\u00e1 doru\u010dovacia polo\u017eka
 
 #CUSTOMER
 customer.list.title=Z\u00e1kazn\u00edk
+customer.edit.title=Edit\u00e1cia z\u00e1kazn\u00edka
 customer.list.allitems=V\u0161etci z\u00e1kazn\u00edci
 customer.title=Z\u00e1kazn\u00edci
 customer.firstName=Meno
