added delivery index link

--- a/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
@@ -46,25 +46,5 @@ courier.edit=Manage courier
 courier=Courier
 
 
-
-#DELIVERY ITEM
-deliveryItem.name=Name
-deliveryItem.description=Description
-deliveryItem.weight=Weight
-deliveryItem.list.title=Delivery items
-deliveryItem.list.allitems=All delivery items
-deliveryItem.new=New delivery item
-
-#CUSTOMER
-customer.list.title=Customers
-customer.title=Customers
-customer.list.allitems=All customers
-customer.firstName=Name
-customer.lastName=Surname
-customer.email=Email
-customer.street=Street
-customer.city=City
-customer.zipCode=Zip Code
-customer.country=Country
-customer.telephoneNumber=Phone
+#DELIVERY
 
