--- a/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
@@ -43,6 +43,8 @@ customer.country=Krajina
 customer.telephoneNumber=Telef\u00f3n
 customer.create=Vytvori\u0165 nov\u00e9ho z\u00e1kazn\u00edka
 
+#DELIVERY
+delivery.list.title=Z\u00e1sielky
 
 #####SYSTEM MESSAGES#####
 
