Delivery Item form visual modification

--- a/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
@@ -26,6 +26,9 @@ deliveryItem.weight=Weight
 deliveryItem.list.title=Delivery items
 deliveryItem.list.allitems=All delivery items
 deliveryItem.new=New delivery item
+deliveryItem.edit=Manage delivery item
+deliveryItem.form=Delivery item form
+deliveryItem.create=Create new delivery item
 
 #CUSTOMER
 customer.list.title=Customers
