First part of rest client impl

--- a/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_en.properties
@@ -30,6 +30,7 @@ deliveryItem.edit=Manage delivery item
 deliveryItem.form=Delivery item form
 deliveryItem.create=Create new delivery item
 
+
 #CUSTOMER
 customer.list.title=Customers
 customer.edit.title=Edit customer
@@ -59,5 +60,7 @@ delivery.courier=Courier
 delivery.createMessage=Create New Delivery
 delivery.status=Status
 delivery.list.title=Deliveries
+delivery.edit.title=Delivery
 delivery.price=Price
 delivery.title=Delivery
+delivery.additionalInformation=Additional information
