--- a/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
+++ b/DeliverySystemWeb/src/main/resources/StripesResources_sk.properties
@@ -33,6 +33,9 @@ deliveryItem.weight=V\u00e1ha
 deliveryItem.list.title=Doru\u010dovacie polo\u017eky
 deliveryItem.list.allitems=V\u0161etky doru\u010dovacie polo\u017eky
 deliveryItem.new=Nov\u00e1 doru\u010dovacia polo\u017eka 
+deliveryItem.edit=Spr\u00e1va doru\u010dovac\u00edch polo\u017eiek
+deliveryItem.form=Doru\u010dovacie polo\u017eky
+deliveryItem.create=Vytvori\u0165 doru\u010dovaciu polo\u017eku
 
 #CUSTOMER
 customer.list.title=Z\u00e1kazn\u00edk
@@ -77,10 +80,12 @@ validation.file.postBodyTooBig=Ve\u013ekos\u0165 nahr\u00e1van\u00e9ho {3} KB pr
 
 delivery.customer=Z\u00e1kazn\u00edk
 delivery.placeFrom=Z miesta
-delivery.placeTo=Do
+delivery.placeTo=Do miesta
 delivery.courier=Kuri\u00e9r
-delivery.createMessage=Votvori\u0165 nov\u00fa z\u00e1sielku
-delivery.status=Stav
-delivery.list.title=V\u0161etky z\u00e1sielkz
+delivery.createMessage=Vytvori\u0165 nov\u00fa z\u00e1sielku
+delivery.status=Stav z\u00e1sielky
+delivery.list.title=V\u0161etky z\u00e1sielky
+delivery.edit.title=Zasielky
 delivery.price=Cena
 delivery.title=Z\u00e1sielka
+delivery.additionalInformation=Dodato\u010dn\u00e9 inform\u00e1cie
