Added first part of localization

--- a/DeliveryServiceWeb/src/main/resources/StripesResources_en.properties
+++ b/DeliveryServiceWeb/src/main/resources/StripesResources_en.properties
@@ -64,3 +64,12 @@ delivery.edit.title=Delivery
 delivery.price=Price
 delivery.title=Delivery
 delivery.additionalInformation=Additional information
+
+
+#Security
+login.title=Login
+login.error=Error
+registration.successful=Registration successful
+login.label.username=Username
+login.label.password=Password
+login.button.login=Submit
