--- a/DeliveryServiceWeb/src/main/resources/StripesResources_sk.properties
+++ b/DeliveryServiceWeb/src/main/resources/StripesResources_sk.properties
@@ -89,3 +89,12 @@ delivery.edit.title=Zasielky
 delivery.price=Cena
 delivery.title=Z\u00e1sielka
 delivery.additionalInformation=Dodato\u010dn\u00e9 inform\u00e1cie
+
+
+#Security
+login.title=Prihl\u00e1senie
+login.error=Chyba
+registration.successful=Registr\u00e1cia \u00faspe\u0161n\u00e1
+login.label.username=Prihlasovacie meno
+login.label.password=Heslo
+login.button.login=Registruj
