--- a/DeliveryServiceWeb/src/main/resources/StripesResources_en.properties
+++ b/DeliveryServiceWeb/src/main/resources/StripesResources_en.properties
@@ -68,7 +68,7 @@ delivery.additionalInformation=Additional information
 
 #Security
 login.title=Login
-login.error=Error
+login.error=Login error - wrong username or password
 registration.successful=Registration successful
 login.label.username=Username
 login.label.password=Password
