--- a/DeliveryServiceWeb/src/main/resources/StripesResources_sk.properties
+++ b/DeliveryServiceWeb/src/main/resources/StripesResources_sk.properties
@@ -93,7 +93,7 @@ delivery.additionalInformation=Dodato\u010dn\u00e9 inform\u00e1cie
 
 #Security
 login.title=Prihl\u00e1senie
-login.error=Chyba
+login.error=Chyba zl\u00e9 prihlasovacie meno alebo heslo
 registration.successful=Registr\u00e1cia \u00faspe\u0161n\u00e1
 login.label.username=Prihlasovacie meno
 login.label.password=Heslo
