fixed type in localization

--- a/DeliveryServiceWeb/src/main/resources/StripesResources_en.properties
+++ b/DeliveryServiceWeb/src/main/resources/StripesResources_en.properties
@@ -73,3 +73,4 @@ registration.successful=Registration successful
 login.label.username=Username
 login.label.password=Password
 login.button.login=Submit
+login.logout=Logout
