--- a/DeliveryServiceWeb/src/main/resources/StripesResources_sk.properties
+++ b/DeliveryServiceWeb/src/main/resources/StripesResources_sk.properties
@@ -98,4 +98,4 @@ registration.successful=Registr\u00e1cia \u00faspe\u0161n\u00e1
 login.label.username=Prihlasovacie meno
 login.label.password=Heslo
 login.button.login=Prihl\u00e1s
-login.label=Odhl\u00e1senie
+login.logout=Odhl\u00e1senie
