new functions localization added

--- a/DeliveryServiceWeb/src/main/resources/StripesResources_en.properties
+++ b/DeliveryServiceWeb/src/main/resources/StripesResources_en.properties
@@ -46,6 +46,7 @@ customer.telephoneNumber=Phone
 customer.create=Create new customer
 
 
+
 courier.title=Couriers
 courier.edit=Manage courier
 courier=Courier
@@ -74,3 +75,7 @@ login.label.username=Username
 login.label.password=Password
 login.button.login=Submit
 login.logout=Logout
+
+user.username=Username
+user.password=Password
+user.password2=Password (repeated)
