fixed message typo in validation error

--- a/DeliveryServiceWeb/src/main/resources/StripesResources_en.properties
+++ b/DeliveryServiceWeb/src/main/resources/StripesResources_en.properties
@@ -44,6 +44,12 @@ customer.zipCode=Zip Code
 customer.country=Country
 customer.telephoneNumber=Phone
 customer.create=Create new customer
+customerDTO.firstName=First name
+customerDTO.lastName=Last name
+customerDTO.email=Email
+userDTO.username=Username
+userDTO.password=Password
+password2=Password (repeated)
 
 
 
