--- a/DeliveryServiceWeb/src/main/resources/StripesResources_sk.properties
+++ b/DeliveryServiceWeb/src/main/resources/StripesResources_sk.properties
@@ -51,6 +51,12 @@ customer.zipCode=PS\u010c
 customer.country=Krajina
 customer.telephoneNumber=Telef\u00f3n
 customer.create=Vytvori\u0165 nov\u00e9ho z\u00e1kazn\u00edka
+customerDTO.firstName=Meno
+customerDTO.lastName=Priezvisko
+customerDTO.email=Email
+userDTO.username=Prihlasovacie meno
+userDTO.password=Heslo
+password2=Heslo (znova)
 
 #DELIVERY
 delivery.list.title=Z\u00e1sielky
