Delivery item can't be deleted if it's in one or more deliveries

--- a/DeliveryServiceWeb/src/main/resources/StripesResources_en.properties
+++ b/DeliveryServiceWeb/src/main/resources/StripesResources_en.properties
@@ -29,6 +29,7 @@ deliveryItem.new=New delivery item
 deliveryItem.edit=Manage delivery item
 deliveryItem.form=Delivery item form
 deliveryItem.create=Create new delivery item
+deliveryItem.cantdeletedependency=Delivery item can't be deleted, it's part of one or more deliveries
 
 
 #CUSTOMER
