--- a/DeliveryServiceWeb/src/main/resources/StripesResources_sk.properties
+++ b/DeliveryServiceWeb/src/main/resources/StripesResources_sk.properties
@@ -36,6 +36,7 @@ deliveryItem.new=Nov\u00e1 doru\u010dovacia polo\u017eka
 deliveryItem.edit=Spr\u00e1va doru\u010dovac\u00edch polo\u017eiek
 deliveryItem.form=Doru\u010dovacie polo\u017eky
 deliveryItem.create=Vytvori\u0165 doru\u010dovaciu polo\u017eku
+deliveryItem.cantdeletedependency=Doru\u010dovacia polo\u017eka nem\u00f4\u017ee by\u0165 vymazan\u00e1, preto\u017ee je s\u00fa\u010das\u0165ou z\u00e1sielok
 
 #CUSTOMER
 customer.list.title=Z\u00e1kazn\u00edk
@@ -109,3 +110,4 @@ login.logout=Odhl\u00e1senie
 user.username=Prihlasovacie meno
 user.password=Heslo
 user.password2=Heslo (znova)
+
